add login route in swagger
